--- a/social-media/src/App.css
+++ b/social-media/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@300&family=Inconsolata:wght@400;500;600&display=swap');
+
 .App {
   text-align: center;
 }
@@ -32,7 +35,60 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+label {
+  font-family: 'Inconsolata', monospace;
+}
+
+.nb {
+  margin-bottom: 10px;
+
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid white;
+  padding: 10px;
+  background-color: #f8f8ff;
+  border-radius: 2%;
+  border-style: solid;
+  border-color: #EEF2FF;
+  border-width: 5px;
+}
+
+.animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg,
+      #231557 0%,
+      #44107a 29%,
+      #ff1361 67%,
+      #fff800 100%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-size: 20px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+.loginsignupheading {
+  font-family: 'Arima', cursive;
+  font-family: 'Inconsolata', monospace;
 }
