Added FileUploadPage Component

--- a/social-media/src/components/NewsFeed/NewsFeed.css
+++ b/social-media/src/components/NewsFeed/NewsFeed.css
@@ -13,7 +13,8 @@
 .post-background{
     margin-top: -25px;
     background: rgb(28,0,36);
-    background: linear-gradient(90deg, rgba(28,0,36,0.5219129888283438) 0%, rgba(67,19,156,1) 0%, rgba(0,212,255,0.7936216723017332) 100%);
+    background: linear-gradient(90deg, rgba(28,0,36,0.5219129888283438) 0%, rgba(67,19,156,1) 0%, rgba(0,212,255,0.7936216723017332) 100%); 
+    /* background-color: #FAD9A1; */
 }
 
 .post-heading{
