--- a/social-media/src/components/NewsFeed/NewsFeed.css
+++ b/social-media/src/components/NewsFeed/NewsFeed.css
@@ -17,11 +17,18 @@
     /* background-color: #FAD9A1; */
 }
 
-.post-heading{
+.post-heading {
+    font-family: Georgia, sans-serif;
+    font-size: 5em;
+    letter-spacing: -2px;
+    
+  }
+  
+/* .post-heading{
     font-size: 70px;
     font-weight: 600;
     background-image: linear-gradient(to right, #553c9a, #b393d3);
     color: transparent;
     background-clip: text;
     -webkit-background-clip: text;      
-}
+} */
